// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExampleChapter 快照测试 Step 0 快照应匹配 1`] = `
<div>
  <div
    class="ex-scene scene-pad"
  >
    <header
      class="masthead"
    >
      <span
        class="brand"
      >
        Your Presentation
      </span>
      <span
        class="issue"
      >
        Issue · 01 — Replace this
      </span>
    </header>
    <hr
      class="rule"
    />
    <div
      class="ex-cover-body"
    >
      <div
        class="kicker"
      >
        Chapter 01 — Example
      </div>
      <h1
        class="ex-cover-h"
      >
        <span
          data-class=""
          data-delay=""
          data-duration="900"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-cn"
          >
            这是 
          </span>
        </span>
        <span
          data-class=""
          data-delay="300"
          data-duration="900"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-it ex-em"
          >
            first step
          </span>
        </span>
        <span
          data-class=""
          data-delay="650"
          data-duration="900"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-cn"
          >
            .
          </span>
        </span>
      </h1>
      <div
        class="ex-cover-foot label-mono"
      >
        <span
          class="dot-accent"
        />
          Tap anywhere to advance
      </div>
    </div>
  </div>
</div>
`;

exports[`ExampleChapter 快照测试 Step 1 快照应匹配 1`] = `
<div>
  <div
    class="ex-scene scene-pad"
  >
    <header
      class="masthead"
    >
      <span
        class="brand"
      >
        Your Presentation
      </span>
      <span
        class="issue"
      >
        Issue · 01
      </span>
    </header>
    <hr
      class="rule"
    />
    <div
      class="ex-split"
    >
      <div
        class="ex-split-num hero-num"
      >
        02
      </div>
      <div
        class="ex-split-body"
      >
        <div
          class="kicker"
        >
          每一步
        </div>
        <h2
          class="ex-split-h"
        >
          <span
            data-class=""
            data-delay=""
            data-duration="900"
            data-show="true"
            data-testid="mask-reveal"
          >
            <span
              class="serif-cn"
            >
              独占 
            </span>
          </span>
          <span
            data-class=""
            data-delay="300"
            data-duration="900"
            data-show="true"
            data-testid="mask-reveal"
          >
            <span
              class="serif-it ex-em"
            >
              整个屏幕
            </span>
          </span>
          <span
            data-class=""
            data-delay="650"
            data-duration="900"
            data-show="true"
            data-testid="mask-reveal"
          >
            <span
              class="serif-cn"
            >
              .
            </span>
          </span>
        </h2>
        <p
          class="ex-split-p"
        >
          The current theme controls every visual detail — palette, fonts, hero-number style, rule weight, decoration, motion. The chapter code is theme-agnostic.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`ExampleChapter 快照测试 Step 2 快照应匹配 1`] = `
<div>
  <div
    class="ex-scene scene-pad ex-close"
  >
    <div
      class="ex-close-inner"
    >
      <div
        class="kicker"
      >
        Now
      </div>
      <div
        class="pull-quote ex-quote"
      >
        <span
          data-class=""
          data-delay=""
          data-duration="1100"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-cn"
          >
            Replace this with 
          </span>
        </span>
        <span
          data-class=""
          data-delay="400"
          data-duration="1100"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-it ex-em"
          >
            your own 
          </span>
        </span>
        <span
          data-class=""
          data-delay="760"
          data-duration="1100"
          data-show="true"
          data-testid="mask-reveal"
        >
          <span
            class="serif-cn"
          >
            chapters.
          </span>
        </span>
      </div>
      <div
        class="ex-close-foot label-mono"
      >
        See SKILL.md / CHAPTER-CRAFT.md / THEMES.md
      </div>
    </div>
  </div>
</div>
`;
